#1374 Implement ability to inject instances for controller testing